# verdict

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  SPEC.md  docker-compose.yml  fly.toml
apps/api/: .env.example  Cargo.toml  README.md
apps/api/.sqlx/: query-03647aaa7a14d5358dd5875fed45e2b64b0ba869a1b829f62bbaf5f2826cdb61.json  query-03a21c1cac70f2f7bb1074d8e81ee35afb25f35a7073b7ef2fb86e58190744e3.json  query-0f112655dcbebe73041f2e4c36cfbe41810f58d51c5f84904999d81bf99dc711.json  query-1f282e05429ea5c7caa76c89b6ae79aedddc33850df5bb936c16b699c0f0f536.json  query-24c1031a2594399dbde094b5a3e3f1a3d1af2f8b6061c8f9ec5d0822b4981e4a.json  query-2d4748bd27418be73b0711e4a877c52aee370e4c868f01c878e503cc919fe201.json  query-36fcfc9a9566242c4ddf04c35fa9074648a03fadb243c5338a65068864e06faf.json  query-3ba37bdfa269b3286c001c2dac19d347a534f62b06a929ee2f59bef8f485abb0.json  query-47be27c313a37f7c05fdc43e2b5b66ba7ba33f362782811c9b548ee7cf8ca930.json  query-4879c2b87c21021d78b17de7c8a0af34942fac0e7e7f055f52b88eb44ae74632.json  query-48eebde401467095b5eeca09382b7b5a8bdfd345a544fab1d00bba5ce092f3fc.json  query-505550c03dff91264845469036976a0a06c7736d15ebb975e059c5b10989e35a.json  query-552a10dc9a1a95116701c7edf52157d51cdf68e0c1a8f633ca0d464d5108345f.json  query-5ff143358cce5a78144d62a773c640567a07416ae0b5c0be44e4d9a3050b8252.json  query-6535e5edeffea2c195a5d0216b351ffaca1a811c91a9794276cbe000cbe80666.json  query-6a1fc2a5c34502191295d71dcb6fb78a52050265c1fc18506b42b3ff5b07c9ec.json  query-6a70e5aea3e13c445dba7d6dacbe65d788dfc70bc5f608b0fb65a5224a8a2a69.json  query-70a8cf86d881a09c245e2199ca2b15f937e273415939bcee7389150fea2bd40e.json  query-7901d5caacb7f37316c35f940c1125206332bd9d12d189e8c25add87d3cf8989.json  query-7aafd06b90e6cf78dfe2266033f18f56c31c954634a103de613ababb2dcb1730.json  query-836dc4015dd5c1b20c7978c692b35a4a26ed663704151cb1991a396306ea8f83.json  query-8ecfc7bb22ddfde318c2d226bf4585b7c7a678b124a74ae9b63ad14a70f76f66.json  query-9347efcb29a2deb408466523e5ede5be24e702122679416762049d4693b09608.json  query-93d1d07e52151abac24db513b5f76f0a1fc0fb9aeb74745f7c7914faac9ae1c4.json  (+23 more)
(+54 files in other folders)
