[package]
name = "verdict-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
dotenvy.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
rust_decimal.workspace = true
reqwest.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
validator.workspace = true

[dev-dependencies]
http-body-util.workspace = true
tower.workspace = true
